FlightController - primeros endPoints